--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/regular.min.css"
+      integrity="sha512-lQP1BiSutAy+g9L+bDr1v9758SFLCJ1fK+6tXzu5M22G7/pigzb+01L31Cu1TUlWYr3lnQ4XQVmQfnpTZVW1Og=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="./script.js"></script>
     <title>Boom Baam | Ni'22</title>
   </head>
   <body>
     <div class="container">
+      <div class="img1"></div>
       <div class="timer"></div>
+      <div class="img2"></div>
     </div>
   </body>
 </html>
