--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <title>Boom Baam | Ni'22</title>
   </head>
   <body>
     <div class="container">
-      <div class="img1"></div>
-      <div class="timer"></div>
       <div class="img2"></div>
+      <div class="timer"></div>
+      <div class="img1"></div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
