--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <div class="timer"></div>
       <div class="img1"></div>
     </div>
+    <div class="name-container">
+      <div class="n box"></div>
+      <div class="i box"></div>
+      <div class="d box"></div>
+      <div class="h box"></div>
+      <div class="i box"></div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
