--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="img2"></div>
-      <div class="timer"></div>
+      <div id="change" class="timer"></div>
       <div class="img1"></div>
     </div>
     <div class="name-container">
