--- a/index.html
+++ b/index.html
@@ -16,18 +16,9 @@
     <title>Boom Baam | Ni'22</title>
   </head>
   <body>
-    <div class="container">
-      <div class="img2"></div>
-      <div id="change" class="timer"></div>
-      <div class="img1"></div>
-    </div>
-    <div class="name-container">
-      <div class="n box"></div>
-      <div class="i box"></div>
-      <div class="d box"></div>
-      <div class="h box"></div>
-      <div class="i box"></div>
-    </div>
+      <div id="change" class="timerOne"></div>
+      <div id="change" class="timerTwo"></div>
+    
     <script src="./script.js"></script>
   </body>
 </html>
