--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
-    <title>Boom Baam | Ni'22</title>
+    <title>Safarnama | MaNi'23</title>
   </head>
   <body>
       <div id="change" class="timerOne"></div>
